--- a/index.html
+++ b/index.html
@@ -2,10 +2,21 @@
 
 <html>
   <head>
+    <title>VC Enterprise Portfolio</title>
+    <link rel="stylesheet" href="./styles.css">
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
   </head>
 
   <body>
-    
+    <header>
+      <h1>The VC Experience</h1>
+      <nav class="navbar">
+        <ul>
+          <li><a href="#">Mission Statement</a></li>
+          <li><a href="#">Portfolio</a></li>
+          <li><a href="#">Investment Team</a></li>
+        </ul>
+      </nav>
+    </header>
   </body>
 </html>
