--- a/index.html
+++ b/index.html
@@ -1,22 +1,96 @@
 <!DOCTYPE html>
 
 <html>
-  <head>
-    <title>VC Enterprise Portfolio</title>
-    <link rel="stylesheet" href="./styles.css">
-    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
-  </head>
+	<head>
+		<title>VC Enterprise Portfolio</title>
+		<link rel="stylesheet" href="./styles.css" />
+    <link href="https://fonts.googleapis.com/css?family=Lexend+Mega" rel="stylesheet" type="text/css">
+		<link rel="shortcut icon" href="favicon.ico" type="image/x-icon" />
+	</head>
 
-  <body>
-    <header>
-      <h1>The VC Experience</h1>
-      <nav class="navbar">
-        <ul>
-          <li><a href="#">Mission Statement</a></li>
-          <li><a href="#">Portfolio</a></li>
-          <li><a href="#">Investment Team</a></li>
-        </ul>
-      </nav>
-    </header>
-  </body>
+	<body>
+		<header>
+			<h1>The VC Experience</h1>
+			<nav class="navbar">
+				<ul>
+					<li><a href="#mission-statement">Mission Statement</a></li>
+					<li><a href="#portfolio">Portfolio</a></li>
+					<li><a href="#team">Investment Team</a></li>
+				</ul>
+			</nav>
+		</header>
+
+		<section id="#mission-statement">
+			<div class="mission">
+				<div class="content">
+					<h2>The VC Experience</h2>
+					<p>
+						Our fund is committed to the furthering entrepreneurs in the
+						mobility sector.
+					</p>
+				</div>
+			</div>
+		</section>
+
+		<section id="portfolio">
+			<h2>Our Mobility Portfolio</h2>
+			<p>
+				Impacting diverse sectors of mobility to better the human experience and
+				the world we inhabit
+			</p>
+			<div class="sectors">
+				<div class="sector">
+					<img src="./images/aero.jpeg" />
+					<span class="sector-name">Aero Argonauts</span>
+				</div>
+				<div class="sector">
+					<img src="./images/auto.jpeg" />
+					<span class="sector-name">Auto Bueno</span>
+				</div>
+				<div class="sector">
+					<img src="./images/lane.jpeg"//>
+					<span class="sector-name">Lane Chatter</span>
+				</div>
+				<div class="sector">
+					<img src="./images/treads.jpeg"//>
+					<span class="sector-name">Tiger Treads</span>
+				</div>
+				<div class="sector">
+					<img src="./images/valet.jpeg"//>
+					<span class="sector-name">Valet Today</span>
+				</div>
+			</div>
+		</section>
+
+		<section id="team">
+      <h2>Our Team</h2>
+      <div class="teammate">
+        <div class="personnel">
+          <img src='./images/employee-one.jpg' />
+          <h2>Lisa Fischer</h2>
+          <p>C.E.O. - Founder and Principal Investor</p>
+        </div>
+        <div class="personnel">
+          <img src='./images/employee-two.jpg' />
+          <h2>Alex Lasker</h2>
+          <p>Partner - Research & Development</p>
+        </div>
+        <div class="personnel">
+          <img src='./images/employee-three.jpg' />
+          <h2>Omar Carlsen</h2>
+          <p>Partner - Partnerships & Marketing</p>
+        </div>
+      </div>
+    </section>
+
+    <section class="contact">
+      <h2>The VC Experience</h2>
+      <p>introduction@vcexperience.investors</p>
+      <p>555-867-5309</p>
+    </section>
+
+		<footer>
+      <p>copyright VC Enterprises 2020</p>
+    </footer>
+	</body>
 </html>
