rearranged HTML and CSS

--- a/index.html
+++ b/index.html
@@ -4,7 +4,11 @@
 	<head>
 		<title>VC Enterprise Portfolio</title>
 		<link rel="stylesheet" href="./styles.css" />
-    <link href="https://fonts.googleapis.com/css?family=Lexend+Mega" rel="stylesheet" type="text/css">
+		<link
+			href="https://fonts.googleapis.com/css?family=Lexend+Mega"
+			rel="stylesheet"
+			type="text/css"
+		/>
 		<link rel="shortcut icon" href="favicon.ico" type="image/x-icon" />
 	</head>
 
@@ -48,49 +52,49 @@
 					<span class="sector-name">Auto Bueno</span>
 				</div>
 				<div class="sector">
-					<img src="./images/lane.jpeg"//>
+					<img src="./images/lane.jpeg" />
 					<span class="sector-name">Lane Chatter</span>
 				</div>
 				<div class="sector">
-					<img src="./images/treads.jpeg"//>
+					<img src="./images/treads.jpeg" />
 					<span class="sector-name">Tiger Treads</span>
 				</div>
 				<div class="sector">
-					<img src="./images/valet.jpeg"//>
+					<img src="./images/valet.jpeg" />
 					<span class="sector-name">Valet Today</span>
 				</div>
 			</div>
 		</section>
 
 		<section id="team">
-      <h2>Our Team</h2>
-      <div class="teammate">
-        <div class="personnel">
-          <img src='./images/employee-one.jpg' />
-          <h2>Lisa Fischer</h2>
-          <p>C.E.O. - Founder and Principal Investor</p>
-        </div>
-        <div class="personnel">
-          <img src='./images/employee-two.jpg' />
-          <h2>Alex Lasker</h2>
-          <p>Partner - Research & Development</p>
-        </div>
-        <div class="personnel">
-          <img src='./images/employee-three.jpg' />
-          <h2>Omar Carlsen</h2>
-          <p>Partner - Partnerships & Marketing</p>
-        </div>
-      </div>
-    </section>
+			<h2>Our Team</h2>
+			<div class="teammate">
+				<div class="personnel">
+					<img src="./images/employee-one.jpg" />
+					<h2>Lisa Fischer</h2>
+					<p>C.E.O. - Founder and Principal Investor</p>
+				</div>
+				<div class="personnel">
+					<img src="./images/employee-two.jpg" />
+					<h2>Alex Lasker</h2>
+					<p>Partner - Research & Development</p>
+				</div>
+				<div class="personnel">
+					<img src="./images/employee-three.jpg" />
+					<h2>Omar Carlsen</h2>
+					<p>Partner - Partnerships & Marketing</p>
+				</div>
+			</div>
+		</section>
 
-    <section class="contact">
-      <h2>The VC Experience</h2>
-      <p>introduction@vcexperience.investors</p>
-      <p>555-867-5309</p>
-    </section>
+		<section class="contact">
+			<h2>The VC Experience</h2>
+			<p>introduction@vcexperience.investors</p>
+			<p>555-867-5309</p>
+		</section>
 
 		<footer>
-      <p>copyright VC Enterprises 2020</p>
-    </footer>
+			<p>copyright VC Enterprises 2020</p>
+		</footer>
 	</body>
 </html>
